fixed the extra gap

--- a/ui/components/multichain/app-header/app-header.scss
+++ b/ui/components/multichain/app-header/app-header.scss
@@ -33,65 +33,69 @@
       max-width: 250px;
     }
 
-    &__container {
-      width: fit-content;
+    &--avatar-network p {
+      display: none;
+
+      &__container {
+        width: fit-content;
+      }
+    }
+
+    &__lock-contents {
+      flex-flow: row nowrap;
+      height: 64px;
+
+      @include screen-sm-max {
+        height: $height-screen-sm-max;
+      }
+
+      @include screen-sm-min {
+        width: $width-screen-sm-min;
+      }
+
+      @include screen-md-min {
+        width: $width-screen-md-min;
+      }
+
+      @include screen-lg-min {
+        width: $width-screen-lg-min;
+      }
     }
   }
 
-  &__lock-contents {
-    flex-flow: row nowrap;
-    height: 64px;
-
-    @include screen-sm-max {
-      height: $height-screen-sm-max;
-    }
-
-    @include screen-sm-min {
-      width: $width-screen-sm-min;
-    }
-
-    @include screen-md-min {
-      width: $width-screen-md-min;
-    }
-
-    @include screen-lg-min {
-      width: $width-screen-lg-min;
-    }
-  }
-}
-
-.multichain-app-header-shadow {
-  box-shadow: var(--shadow-size-md) var(--color-shadow-default);
-}
-
-.multichain-app-header-logo {
-  height: 75px;
-  flex: 0 0 auto;
-}
-
-.custody-logo {
-  @media screen and (max-width: $break-small) {
-    display: none;
+  .multichain-app-header-shadow {
+    box-shadow: var(--shadow-size-md) var(--color-shadow-default);
   }
 
-  &--icon {
-    height: 35px;
-    margin-left: 10px;
+  .multichain-app-header-logo {
+    height: 75px;
+    flex: 0 0 auto;
   }
-}
 
-.app-header__metafox-logo {
-  &--icon {
-    height: 32px;
-
-    @include screen-sm-min {
+  .custody-logo {
+    @media screen and (max-width: $break-small) {
       display: none;
     }
+
+    &--icon {
+      height: 35px;
+      margin-left: 10px;
+    }
   }
 
-  &--horizontal {
-    @include screen-sm-max {
-      display: none;
+  .app-header__metafox-logo {
+    &--icon {
+      height: 32px;
+
+      @include screen-sm-min {
+        display: none;
+      }
+    }
+
+    &--horizontal {
+      @include screen-sm-max {
+        display: none;
+      }
     }
   }
 }
